--- a/robotique_experimentale/rviz_plugins_robexp/package.xml
+++ b/robotique_experimentale/rviz_plugins_robexp/package.xml
@@ -7,7 +7,7 @@
     <!-- One maintainer tag required, multiple allowed, one person per tag -->
     <!-- Example:  -->
     <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-    <maintainer email="aline@todo.todo">aline</maintainer>
+    <maintainer email="aline.baudry@sorbonne-universite.fr">aline baudry</maintainer>
 
 
     <!-- One license tag required, multiple allowed, one license per tag -->
